<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_user"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@android:color/darker_gray"
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:text="@string/username"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_user"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="3"
        tools:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_username"
        app:layout_constraintTop_toBottomOf="@+id/txt_username" />

    <TextView
        android:id="@+id/txt_followers"
        android:layout_width="40dp"
        android:layout_height="22dp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="3"
        tools:text="@string/number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/followers"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <TextView
        android:id="@+id/followers"
        android:layout_width="65dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/followers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <TextView
        android:id="@+id/txt_following"
        android:layout_width="40dp"
        android:layout_height="22dp"
        android:textStyle="bold"
        android:ellipsize="end"
        android:maxLines="3"
        tools:text="@string/number"
        app:layout_constraintBottom_toBottomOf="@+id/following"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/following"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/following"
        android:layout_width="65dp"
        android:layout_height="22dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/following"
        app:layout_constraintBottom_toBottomOf="@+id/txt_followers"
        app:layout_constraintEnd_toEndOf="@+id/txt_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/followers"
        app:layout_constraintTop_toTopOf="@+id/txt_followers"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>